--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Fonts</title>
+    <title>Anywhere Workers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <h1>Anywhere Workers</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa magni delectus unde tempore eaque quod odit quas
+        corrupti. Voluptates repellat quis totam dolorem inventore esse porro aperiam. Fuga, aspernatur sed?</p>
+    <p class="Read more">Read more about this growing trend in our study </p>
+    <a href="#">Watch Video</a>
 </body>
 
 </html>
