--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
 </head>
 
 <body>
-    <h1>Anywhere Workers</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa magni delectus unde tempore eaque quod odit quas
-        corrupti. Voluptates repellat quis totam dolorem inventore esse porro aperiam. Fuga, aspernatur sed?</p>
-    <p class="Read more">Read more about this growing trend in our study </p>
-    <a href="#">Watch Video</a>
+
+    <h1>Anywhere <br>workers</h1>
+
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum libero
+        fugit officiis omnis nobis non, molestias
+        sint, dicta reiciendis recusandae doloremque natus voluptatem velit maxime autem porro est vero dolores deserunt
+        excepturi quis perferendis illum! </p>
+
+    <div class="read">READ MORE ABOUT THIS GROWNG TREND IN OUR STUDY</div>
+
+    <a href="#">WATCH VIDEO</a>
+
+
+
+
 </body>
+
 
 </html>
